// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WalletVote should render 1`] = `
<DocumentFragment>
  <section
    data-testid="WalletVote"
  >
    <div
      class="flex mb-4"
    >
      <h2
        class="font-bold mb-0"
      >
        My Vote
      </h2>
      <span
        class="font-bold text-2xl text-theme-neutral-light ml-1"
      >
        (1/1)
      </span>
    </div>
    <div
      class="flex items-center h-11"
    >
      <div
        class="flex items-center -space-x-2"
      >
        <div
          class="sc-AxiKw kDcqaP border-theme-neutral-900 text-theme-neutral-900"
        >
          <div
            class="sc-AxhCb gNZpvr"
            height="21"
            width="21"
          >
            <svg>
              vote.svg
            </svg>
          </div>
        </div>
        <div
          class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
          data-testid="Avatar"
        >
          <div
            class="w-full h-full"
          >
            <img
              alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
              title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
            />
          </div>
        </div>
      </div>
      <div
        class="flex flex-col h-full justify-between ml-4 mr-8"
      >
        <span
          class="text-sm font-semibold text-theme-neutral"
        >
          Delegate
        </span>
        <div
          class="inline-block truncate align-middle"
        >
          <span
            class="text-theme-text max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-base"
            data-testid="address__wallet-name"
          >
            arkx
          </span>
        </div>
      </div>
      <div
        class="flex flex-col h-full items-center justify-between pl-8 border-l border-theme-neutral-300"
      >
        <span
          class="text-sm font-semibold text-theme-neutral"
        >
          Status
        </span>
        <span>
          <div
            class="sc-AxhCb fxrKLH text-theme-success"
            height="1em"
            width="1em"
          >
            <svg>
              ok.svg
            </svg>
          </div>
        </span>
      </div>
      <button
        class="sc-AxirZ dXpJau ml-auto"
        color="primary"
        data-testid="WalletVote__button"
        type="button"
      >
        Unvote
      </button>
    </div>
  </section>
</DocumentFragment>
`;

exports[`WalletVote should render if a delegate is missing its rank 1`] = `
<DocumentFragment>
  <section
    data-testid="WalletVote"
  >
    <div
      class="flex mb-4"
    >
      <h2
        class="font-bold mb-0"
      >
        My Vote
      </h2>
      <span
        class="font-bold text-2xl text-theme-neutral-light ml-1"
      >
        (1/1)
      </span>
    </div>
    <div
      class="flex items-center h-11"
    >
      <div
        class="flex items-center -space-x-2"
      >
        <div
          class="sc-AxiKw kDcqaP border-theme-neutral-900 text-theme-neutral-900"
        >
          <div
            class="sc-AxhCb gNZpvr"
            height="21"
            width="21"
          >
            <svg>
              vote.svg
            </svg>
          </div>
        </div>
        <div
          class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
          data-testid="Avatar"
        >
          <div
            class="w-full h-full"
          >
            <img
              alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
              title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
            />
          </div>
        </div>
      </div>
      <div
        class="flex flex-col h-full justify-between ml-4 mr-8"
      >
        <span
          class="text-sm font-semibold text-theme-neutral"
        >
          Delegate
        </span>
        <div
          class="inline-block truncate align-middle"
        >
          <span
            class="text-theme-text max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-base"
            data-testid="address__wallet-name"
          >
            arkx
          </span>
        </div>
      </div>
      <div
        class="flex flex-col h-full items-center justify-between pl-8 border-l border-theme-neutral-300"
      >
        <span
          class="text-sm font-semibold text-theme-neutral"
        >
          Status
        </span>
        <div
          class="sc-AxhCb fxrKLH text-theme-neutral"
          height="1em"
          width="1em"
        >
          <svg>
            status-clock.svg
          </svg>
        </div>
      </div>
      <button
        class="sc-AxirZ dXpJau ml-auto"
        color="primary"
        data-testid="WalletVote__button"
        type="button"
      >
        Unvote
      </button>
    </div>
  </section>
</DocumentFragment>
`;

exports[`WalletVote should render loading state 1`] = `
<DocumentFragment>
  <section
    data-testid="WalletVote"
  >
    <div
      class="flex mb-4"
    >
      <h2
        class="font-bold mb-0"
      >
        My Vote
      </h2>
    </div>
    <div
      class="flex items-center pr-8 space-x-4"
      data-testid="WalletVote__skeleton"
    >
      <div
        class="flex items-center -space-x-2"
      >
        <div
          class="sc-AxiKw kDcqaP text-theme-neutral-light"
        />
        <div
          class="sc-AxiKw kDcqaP bg-theme-background"
        />
      </div>
      <div
        class="flex flex-col w-full"
      >
        <span
          class="text-sm font-semibold text-theme-neutral"
        >
          <span>
            <span
              class="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
              style="width: 120px; height: 6px;"
            >
              ‌
            </span>
          </span>
        </span>
        <div
          class="w-full font-semibold text-theme-neutral-900"
        >
          <span>
            <span
              class="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
              style="width: 50%; height: 6px;"
            >
              ‌
            </span>
          </span>
          <span>
            <span
              class="react-loading-skeleton ml-4 css-1vmnjpn-skeletonStyles-Skeleton"
              style="width: 10%; height: 6px;"
            >
              ‌
            </span>
          </span>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`WalletVote should render without votes 1`] = `
<DocumentFragment>
  <section
    data-testid="WalletVote"
  >
    <div
      class="flex mb-4"
    >
      <h2
        class="font-bold mb-0"
      >
        My Vote
      </h2>
      <span
        class="font-bold text-2xl text-theme-neutral-light ml-1"
      >
        (0/1)
      </span>
    </div>
    <div
      class="flex items-center justify-between"
      data-testid="WalletVote__empty"
    >
      <div
        class="flex items-center pr-8 space-x-4"
      >
        <div
          class="flex items-center -space-x-2"
        >
          <div
            class="sc-AxiKw kDcqaP text-theme-neutral-light"
          >
            <div
              class="sc-AxhCb gNZpvr"
              height="21"
              width="21"
            >
              <svg>
                vote.svg
              </svg>
            </div>
          </div>
          <div
            class="flex -space-x-3"
          >
            <span
              class="inline-block"
            >
              <div
                class="sc-AxiKw kDcqaP"
              />
            </span>
          </div>
        </div>
        <div
          class="font-semibold text-theme-neutral-900"
        >
          <span
            class="mr-2"
          >
            You have not yet voted for a Delegate
          </span>
          <a
            class="sc-AxhUy fEOaBg inline-flex items-center font-semibold transition-colors duration-200 cursor-pointer text-theme-primary hover:text-theme-primary-dark hover:underline active:text-theme-primary-500"
            data-testid="Link"
            rel="noopener noreferrer"
            to="https://guides.ark.dev/usage-guides/desktop-wallet-voting"
          >
            Learn more
          </a>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;
